force-app/main/default/objects/OW_rtq__c/OW_rtq__c.object-meta.xml
<CustomObject>
    <description>Risk Tolerance Questionnaire (RTQ) - this object stores client responses and outputs from the risk tolerance questionnaire (RTQ) provided by Oxford Risk.</description>
    <label>RTQ</label>
    <nameField>
        <displayFormat>RTQ-{0}</displayFormat>
        <label>RTQ reference</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>RTQs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>