force-app/main/default/objects/OW_rtq__c/fields/ColleagueCompletionNotes__c.field-meta.xml
<CustomField>
    <fullName>ColleagueCompletionNotes__c</fullName>
    <description>If a colleague manually completes an RTQ for a customer, a note must be captured here to explain why this was done as this is not standard process.</description>
    <label>Colleague completion notes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>