force-app/main/default/objects/OW_rtq__c/fields/CompletedBy__c.field-meta.xml
<CustomField>
    <fullName>CompletedBy__c</fullName>
    <description>Captures who the RTQ was completed by. Defaults to the customer but in rare exceptions, an RTQ will be completed by a colleague and we want to capture that this was the case.</description>
    <label>Completed by</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Customer</fullName>
                <default>true</default>
                <label>Customer</label>
            </value>
            <value>
                <fullName>Colleague</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>