force-app/main/default/objects/OW_rtq__c/fields/OW_completed_by_client__c.field-meta.xml
<CustomField>
    <fullName>OW_completed_by_client__c</fullName>
    <description>The date and time the RTQ was completed by the customer. This value is set by the portal at the time the answers are returned.</description>
    <label>Completed by client</label>
    <type>DateTime</type>
</CustomField>