force-app/main/default/objects/OW_rtq__c/fields/OW_confidence_percentile__c.field-meta.xml
<CustomField>
    <fullName>OW_confidence_percentile__c</fullName>
    <description>After the customer submits their RTQ, the portal will send the responses for processing by Oxford Risk. This value is one of the outputs of that risk assessment and is set by the portal once Oxford Risk processing is complete.</description>
    <label>Confidence percentile</label>
    <precision>4</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>