force-app/main/default/objects/OW_rtq__c/fields/OW_duration__c.field-meta.xml
<CustomField>
    <fullName>OW_duration__c</fullName>
    <description>A formula field displaying the difference between the end and start times of the RTQ to give a duration.</description>
    <formula>(OW_completed_by_client__c -  OW_started_by_client__c) * 24 * 60</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Duration (mins)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>