force-app/main/default/objects/OW_rtq__c/fields/OW_household__c.field-meta.xml
<CustomField>
    <fullName>OW_household__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>This is the household to which the customer who completed this RTQ belongs. The value is set by Salesforce when the RTQ record is created.</description>
    <label>Household</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>The account selected in the household field must be a household. 

(Admin message: lookup filter criteria not met on OW_household on the RTQ object)</errorMessage>
        <filterItems>
            <field>Account.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>IndustriesHousehold</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>RTQs (Household)</relationshipLabel>
    <relationshipName>RTQs_household</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>