force-app/main/default/objects/OW_rtq__c/fields/OW_question_01_answer__c.field-meta.xml
<CustomField>
    <fullName>OW_question_01_answer__c</fullName>
    <description>- This field will hold the customer response to the corresponding question.
- The value will be set by the portal when the customer submits their RTQ.
- The question will be held in the associated RTQ assessment record.
- For a completed RTQ, this could be blank should the associated RTQ assessment not have this many questions (more applicable to the higher numbers!)</description>
    <label>#01 Answer</label>
    <length>255</length>
    <type>Text</type>
</CustomField>