force-app/main/default/objects/OW_rtq__c/fields/OW_question_02_text__c.field-meta.xml
<CustomField>
    <fullName>OW_question_02_text__c</fullName>
    <description>This formula field displays the corresponding question from the RTQ assessment record linked to this RTQ. This allows us to display the question value to anyone who looks at the RTQ record.</description>
    <formula>OW_rtq_assessment__r.OW_question_02_text__c</formula>
    <label>#02 question</label>
    <type>Text</type>
</CustomField>