force-app/main/default/objects/OW_rtq__c/fields/OW_rtq_assessment__c.field-meta.xml
<CustomField>
    <fullName>OW_rtq_assessment__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>The RTQ assessment is like the version of questions that are asked of the customer as part of the RTQ. This lookup field establishes a link to a specific RTQ assessment so we know which questions were asked.</description>
    <label>RTQ assessment</label>
    <referenceTo>OW_rtq_assessment__c</referenceTo>
    <relationshipLabel>RTQs</relationshipLabel>
    <relationshipName>RTQs</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>