force-app/main/default/objects/OW_rtq__c/fields/OW_rtq_external_id__c.field-meta.xml
<CustomField>
    <fullName>OW_rtq_external_id__c</fullName>
    <description>The unique identifier functions as a secondary, external key, enabling Connect to uniquely identify records prior to their having a Salesforce ID assigned.

This value is set by the portal.</description>
    <externalId>true</externalId>
    <label>RTQ external ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>