force-app/main/default/objects/OW_rtq__c/fields/OW_started_by_client__c.field-meta.xml
<CustomField>
    <fullName>OW_started_by_client__c</fullName>
    <description>The date and time the RTQ was started by the customer. This value is set by the portal at the time the answers are returned.</description>
    <label>Started by client</label>
    <type>DateTime</type>
</CustomField>